k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worldsbx2b-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worldsbx2b
  template:
    metadata:
      labels:
        app: worldsbx2b
    spec:
      containers:
        - name: worldsbx2b
          image: worldsbx2b:latest
          ports:
            - containerPort: 443 # container port exposed during build
