k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 443 # Service port
      targetPort: 443 # Container port
  type: ClusterIP
